<resources>
    <string name="app_name">My project</string>

    <string name="Select">Select Item</string>
    <string name="string_select">select Item</string>
    <string name="textview">TextView</string>
    <string name="applicant">Applicant</string>
    <string name="personal_information">Personal information</string>
    <string name="cancelit">Cancel</string>
    <string name="nextpage">Next</string>
    <string name="my_string">Don\'t have an Account?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_in">Login</string>
    <string name="login_here">Log in</string>
    <string name="cancel_btn">Cancel</string>
    <string name="email_address">Email address</string>
    <string name="password_required">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">cancel</string>
    <string name="next_pg">next</string>
    <string name="county">County</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="disabilities">Disabilities</string>
    <string name="given_name">Given name</string>
    <string name="district">District</string>
    <string name="my_country_my_identity">My Country, My Identity</string>
    <string name="online_registration_for_national_ids">ONLINE REGISTRATION FOR NATIONAL IDs</string>
    <string name="parish_ward">Parish/Ward</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="religion">Religion</string>
    <string name="sex">Sex</string>
    <string name="sub_county">Sub-County</string>
    <string name="surname">Surname</string>
    <string name="village">Village</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_online_registration_for_national_ids">WELCOME TO ONLINE REGISTRATION FOR NATIONAL IDs</string>
    <string name="uganda_my_country_my_identity">UGANDA-MY COUNTRY, MY IDENTITY</string>
    <string name="country">Country</string>
    <string name="todo_pj">TODO</string>
    <string name="citizen_type">Citizen Type</string>
    <string name="place_of_residence_currently">Place of Residence Currently</string>
    <string name="given_name_one">Given name</string>
    <string name="nin_number">Nin Number</string>
    <string name="surname_one">Surname</string>
    <string name="country_from">Country</string>
    <string name="county_one">County</string>
    <string name="district_one">District</string>
    <string name="other_name_on">Other name</string>
    <string name="parish_ward_one">Parish/ward</string>
    <string name="sub_county_two">Sub-county</string>
    <string name="father_s_details">Father\'s Details</string>
    <string name="living_status_father">Living Status</string>
    <string name="welcome_to">WELCOME TO</string>

</resources>