<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputNinNumber"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/wall">

    <EditText
        android:id="@+id/inputEmailAddress"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:hint="@string/email_address"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Loginhere"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:hint="@string/password_required"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputEmailAddress"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/inputEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailAddress"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/Forgotpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="163dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/login_here"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forgotpassword" />

    <TextView
        android:id="@+id/Loginhere"
        android:layout_width="150dp"
        android:layout_height="103dp"
        android:fontFamily="@font/bangers"
        android:text="@string/login_in"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <LinearLayout
        android:id="@+id/l"
        android:layout_width="360dp"
        android:layout_height="37dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_string"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textviewSignup"
            android:layout_width="108dp"
            android:layout_height="match_parent"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="24sp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btncancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/cancel_btn"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l"
        app:layout_constraintVertical_bias="0.551" />

</androidx.constraintlayout.widget.ConstraintLayout>